db_control extracted to own file

--- a/BigCalendar/templates/show_entries.html
+++ b/BigCalendar/templates/show_entries.html
@@ -3,11 +3,11 @@
   {% if session.logged_in %}
     <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
       <dl>
-        <dt>Title:
+        <dt>Datum:
         <dd><input type=text size=30 name=title>
-        <dt>Text:
+        <dt>Details (optional):
         <dd><textarea name=text rows=5 cols=40></textarea>
-        <dd><input type=submit value=Share>
+        <dd><input type=submit value=Abschicken>
       </dl>
     </form>
   {% endif %}
