--- a/BigCalendar/static/style.css
+++ b/BigCalendar/static/style.css
@@ -16,5 +16,7 @@ h2              { font-size: 1.2em; }
 .flash          { background: #cee5F5; padding: 0.5em;
                   border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
-.apples         { color: green; background: red; }
-.apples h2      { color: black; background: red;}
+.cannot         { background: #F7C7C7; }
+.cannot h2      { background: #F7C7C7; }
+.can            { background: #C7F7D3; }
+.can h2         { background: #C7F7D3; }
