--- a/BigCalendar/templates/layout.html
+++ b/BigCalendar/templates/layout.html
@@ -7,7 +7,7 @@
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
   {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
+    <a href="{{ url_for('add_entry') }}">neuer eintrag</a> <a href="{{ url_for('logout') }}">logout</a>
   {% endif %}
   </div>
   {% for message in get_flashed_messages() %}
