--- a/BigCalendar/templates/show_entries.html
+++ b/BigCalendar/templates/show_entries.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 {% if session.logged_in %}
-{% if add==True %}
+{% if add=='True' %}
 <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
     <dl>
         <dt>Datum:</dt>
