--- a/BigCalendar/templates/layout.html
+++ b/BigCalendar/templates/layout.html
@@ -3,6 +3,8 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
   <h1>BigCalendar</h1>
+  <script src="//code.jquery.com/jquery-2.2.2.min.js"></script>
+  <script src="static/javascript.js"></script>
   <div class=metanav>
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
