--- a/BigCalendar/templates/show_entries.html
+++ b/BigCalendar/templates/show_entries.html
@@ -22,8 +22,8 @@
         {% if session.logged_in %}
             {{ entry.text|safe }}
             <form>
-                <input type="checkbox" name="yes" value=1 id=yes {% if entry.available==1 %} checked {% endif %}><label for="yes">Ich kann!</label>
-                <input type="checkbox" name="no" value=1 id=no {% if entry.available==0 %} checked {% endif %}><label for="no">Ich kann nicht!</label>
+                <input type="checkbox" name="yes" value=1 id="yes"+entry.id {% if entry.available==1 %} checked {% endif %}><label for="yes">Ich kann!</label>
+                <input type="checkbox" name="no" value=1 id="no"+entry.id {% if entry.available==0 %} checked {% endif %}><label for="no">Ich kann nicht!</label>
             </form>
         {% endif %}
     {% else %}
